# motif_subgraph_isomorphism

./: .gitignore  CMakeLists.txt  Makefile  getFilenamesUnderdir.cpp  main.cpp
Matching/: CMakeLists.txt  Filter.cpp  Filter.h  GenerateOrder.cpp  GenerateOrder.h
MotifGraph/: CMakeLists.txt  Graph.cpp  Graph.h  Motif.cpp  Motif.h  MotifG.cpp  MotifG.h  MotifQ.cpp  MotifQ.h
TVEFile/: CMakeLists.txt  CollectGGraphFeatures.cpp  CollectQGraphFeatures.cpp  FilterWriteCandiScale.cpp  GenerateTVEFileQ.cpp  Offline.cpp  TVEFileG.cpp  TVEFileG.h  TVEFileQ.cpp  TVEFileQ.h
bulkQueries/: BulkQueries.cpp  BulkQueries.h  CMakeLists.txt
config/: config.h
inc/: Database_process.h  FilterQueryHelp.h  FilterVertices.h  Graph.h  config.h  types.h
src/: Database_process.cpp  FilterQueryHelp.cpp  FilterVertices.cpp  Graph.cpp
util/: CMakeLists.txt  GenerateTVEFileQ.cpp  GenerateTVEFileQ.h  GraphFeatures.cpp  GraphFeatures.h  TurnEFile2TVEFile.cpp  tools.cpp  tools.h  types.cpp  types.h
